--- a/Java/計概作業/A11_110502557/resources/SimplePlay.fxml
+++ b/Java/計概作業/A11_110502557/resources/SimplePlay.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
@@ -36,22 +37,46 @@
             <Insets bottom="110.0" left="230.0" right="230.0" top="110.0" />
          </padding>
       </GridPane>
-      <VBox alignment="BOTTOM_CENTER" prefHeight="200.0" prefWidth="100.0" spacing="30.0" GridPane.columnIndex="1">
+      <GridPane GridPane.columnIndex="1">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
          <children>
-            <Button fx:id="advancedButton" focusTraversable="false" mnemonicParsing="false" onAction="#onAdvancedButton" text="進階">
-               <font>
-                  <Font size="24.0" />
-               </font>
-            </Button>
-            <Button fx:id="returnButton" focusTraversable="false" mnemonicParsing="false" onAction="#onReturnButton" text="返回">
-               <font>
-                  <Font size="24.0" />
-               </font>
-            </Button>
+            <VBox alignment="BOTTOM_CENTER" prefHeight="200.0" prefWidth="100.0" spacing="30.0" GridPane.rowIndex="1">
+               <children>
+                  <Button fx:id="advancedButton" focusTraversable="false" mnemonicParsing="false" onAction="#onAdvancedButton" text="進階">
+                     <font>
+                        <Font size="24.0" />
+                     </font>
+                  </Button>
+                  <Button fx:id="returnButton" focusTraversable="false" mnemonicParsing="false" onAction="#onReturnButton" text="返回">
+                     <font>
+                        <Font size="24.0" />
+                     </font>
+                  </Button>
+               </children>
+               <padding>
+                  <Insets bottom="100.0" />
+               </padding>
+            </VBox>
+            <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0" spacing="30.0">
+               <padding>
+                  <Insets top="100.0" />
+               </padding>
+               <children>
+                  <Label fx:id="statusLabel" text="遊戲中">
+                     <font>
+                        <Font name="System Bold" size="24.0" />
+                     </font>
+                  </Label>
+                  <Label text="上下左右/WASD：移動&#10;空白鍵：重置" textAlignment="CENTER" />
+               </children>
+            </VBox>
          </children>
-         <padding>
-            <Insets bottom="50.0" left="50.0" right="50.0" top="50.0" />
-         </padding>
-      </VBox>
+      </GridPane>
    </children>
 </GridPane>
