--- a/Java/計概作業/A11_110502557/resources/AdvancedPlay.fxml
+++ b/Java/計概作業/A11_110502557/resources/AdvancedPlay.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<GridPane alignment="CENTER" gridLinesVisible="true" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="A11_110502557.application.AdvancedPlayController">
+<GridPane alignment="CENTER" gridLinesVisible="true" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="A11_110502557.application.Controllers.AdvancedPlayController">
    <columnConstraints>
       <ColumnConstraints hgrow="SOMETIMES" percentWidth="75.0" />
       <ColumnConstraints hgrow="SOMETIMES" />
