--- a/Java/計概作業/A11_110502557/resources/SimplePlay.fxml
+++ b/Java/計概作業/A11_110502557/resources/SimplePlay.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<GridPane alignment="CENTER" gridLinesVisible="true" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/17" fx:controller="A11_110502557.application.SimplePlayController">
+<GridPane alignment="CENTER" gridLinesVisible="true" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/17" fx:controller="A11_110502557.application.Controllers.SimplePlayController">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" percentWidth="75.0" />
     <ColumnConstraints hgrow="SOMETIMES" />
